<resources>
    <string name="app_name">Memento</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_confirm">Confirm</string>

    <string name="preference_file_key" translatable="false">com.pink.cloud.memento.SHARED_PREFERENCE_KEY</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label" translatable="false">Home</string>
    <string name="add_fragment_label" translatable="false">Add</string>
    <string name="camera_fragment_label" translatable="false">Camera</string>

    <string name="enter_caption">Enter caption…</string>
    <string name="priority">Priority</string>
    <string name="alarm">Alarm</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="camera_permission_not_allowed">Allow camera permission to use camera.</string>
    <string name="media_permission_not_allowed">Allow media permission to fetch image from gallery.</string>
    <string name="add_photo">Add photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="cd_take_photo">Take Photo</string>
    <string name="cd_button_photo">Fetch Photo</string>
    <string name="cd_reverse_camera">Reverse Camera</string>
    <string name="cd_album">album</string>
    <string name="search_title">Search</string>
    <string name="ok">OK</string>
    <string name="dialog_no_photo">Add photo before creating a memo.</string>
    <string name="channel_name">Alarm Channel</string>
    <string name="channel_description">Notification channel for scheduled memo alarm</string>
    <string name="notification_title">Check this memo!</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="font_family">Font</string>
    <string name="font_size">Font size</string>
    <string name="font_sample">Don\'t believe his lies.</string>
    <string name="a">A</string>
    <string name="default_font">Default</string>
    <string name="font_nanum_barunpen">Nanum Barunpen</string>
    <string name="font_nanum_brush">Nanum Brush</string>
    <string name="font_nanum_pen">Nanum Pen</string>
    <string name="order_by">Order by</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="progress_without_photo">Progress without photo</string>
    <string name="ask_progress_without_photo">Continue without photo?</string>
    <string name="continue_with_this_photo">continue with this photo</string>
    <string name="next">NEXT</string>
    <string name="pick_another_photo">pick another photo</string>
    <string name="front_caption_is_full">There is no space. Use the back sheet.</string>
    <string name="back_caption_is_full">There is no space.</string>
    <string name="trash_guide">Memo in recycle bin will be completely deleted after 7 days.</string>
    <string name="flip">flip</string>
    <string name="add_new_memo">Add a new memo</string>
    <string name="recycle_bin_is_empty">Recycle bin is empty.</string>
    <string name="ask_delete_permenantly">Are you sure to delete this memo?</string>
</resources>