<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pinkcloud.memento.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:iconTint="@color/conflowerblue"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_confirm"
        android:icon="@drawable/ic_confirm"
        android:orderInCategory="200"
        android:title="@string/action_confirm"
        android:iconTint="@color/conflowerblue"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        android:iconTint="@color/conflowerblue"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="0"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/conflowerblue"
        app:showAsAction="always"/>
</menu>