<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pinkcloud.memento.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_homeFragment_to_trashFragment"
            app:destination="@id/trashFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.pinkcloud.memento.add.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add">

        <action
            android:id="@+id/action_addFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_addFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_addFragment_to_trashFragment"
            app:destination="@id/trashFragment"
            app:popUpTo="@id/homeFragment"/>
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.pinkcloud.memento.common.CameraFragment"
        android:label="@string/camera_fragment_label"
        tools:layout="@layout/fragment_camera" >
    </fragment>
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.pinkcloud.memento.trash.TrashFragment"
        android:label="TrashFragment" />
</navigation>