<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline_tool_bar"
            android:background="@color/transparent"
            app:tint="@color/white"
            android:layout_marginStart="14dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_tool_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/button_without_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/text_album_unavailable"
            app:layout_constraintBottom_toBottomOf="@id/text_without_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:constraint_referenced_ids="text_album_unavailable, text_without_photo"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_album_unavailable"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:gravity="center"
            android:textColor="@color/conflowerblue"
            android:text="@string/media_permission_not_allowed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_tool_bar"
            app:layout_constraintBottom_toTopOf="@id/text_without_photo"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/text_without_photo"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:gravity="center"
            android:textColor="@color/conflowerblue_light"
            android:text="@string/progress_without_photo"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_album_unavailable"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.fenchtose.nocropper.CropperView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/guideline_tool_bar"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

        <TextView
            android:id="@+id/text_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_photo"
            app:layout_constraintBottom_toTopOf="@id/text_pick_image"
            android:text="@string/continue_with_this_photo"
            app:layout_constraintVertical_chainStyle="packed"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_pick_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_continue"
            android:text="@string/pick_another_photo"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>