<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_front_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/card_content_margin"
            android:background="@color/black"
            android:contentDescription="@string/cd_button_photo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_front_caption"
            style="@style/EditCaption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/card_content_margin"
            android:padding="@dimen/edit_caption_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_photo"
            android:cursorVisible="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_back_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_back_caption"
            style="@style/EditCaption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/card_content_margin"
            android:padding="@dimen/edit_caption_padding"
            app:layout_constraintBottom_toTopOf="@id/view_tools"
            app:layout_constraintTop_toTopOf="parent"
            android:cursorVisible="false"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_content_margin"
            android:layout_marginBottom="@dimen/card_content_margin"
            android:background="@color/gray_200"
            android:padding="@dimen/tools_content_padding"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/text_priority_title"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                app:layout_constraintBottom_toTopOf="@id/slider_priority"
                app:layout_constraintStart_toStartOf="@id/view_tools" />

            <com.pinkcloud.memento.common.PrioritySlider
                android:id="@+id/slider_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:value="50"
                android:valueFrom="0"
                android:valueTo="100"
                app:layout_constraintBottom_toTopOf="@id/text_alarm_title"
                app:layout_constraintEnd_toEndOf="@id/view_tools"
                app:layout_constraintStart_toStartOf="@id/view_tools"
                app:thumbColor="@color/yellow_200"
                app:thumbRadius="12dp"
                app:tickVisible="false"
                app:trackColorActive="@color/yellow"
                app:trackColorInactive="@color/gray_100"
                app:trackHeight="24dp" />

            <TextView
                android:id="@+id/text_alarm_title"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                app:layout_constraintBottom_toTopOf="@id/text_alarm_time"
                app:layout_constraintStart_toStartOf="@id/view_tools" />

            <TextView
                android:id="@+id/text_alarm_state"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                app:layout_constraintEnd_toEndOf="@id/view_tools"
                app:layout_constraintTop_toTopOf="@id/text_alarm_title" />

            <TextView
                android:id="@+id/text_alarm_time"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                app:layout_constraintBottom_toBottomOf="@id/view_tools"
                app:layout_constraintEnd_toEndOf="@id/view_tools" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


